@@ -3,10 +3,11 @@
 New Searches
 
 * smlnk - smLNK is a link-shortening redirector where the URLs are as short as possible (from Jonathon Marshall)
+* cjfr - Get the conjugation for a french verb
 
 Modified Searches
 
-* 
+* setiq - yet another cosmetic change (use of <div> rather than <a>)
 
 Enhancements
 
